Доработка классов команд, валидация

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,6 +33,7 @@ incorrectLocationY=The Location field Y should be not null Double.
 incorrectLocationZ=The Location field Z should be not null Float.
 incorrectLongArg=Incorrect command argument, ID nor found
 incorrectDoubleArg=Incorrect command argument, should be double
+incorrectArg=Incorrect value. The value should be of type 
 
 correctId=The id field has been successfully set.
 correctName=The name field has been successfully set.
